afc: Normalize URL better

According to RFC 1738 there's additional unsafe characters, such as
curly brackets, pipe, quotes, etc that are disalllowed for host names.

Just filter all non-word characters to avoid them slipping in.

BUG: 462381